Fix alignment issue in CurrencyTextField component

--- a/packages/react-sdk-components/src/common.css
+++ b/packages/react-sdk-components/src/common.css
@@ -53,3 +53,8 @@
   cursor: pointer;
   color: var(--app-primary-dark-color);
 }
+
+/* Overriding CurrencyTextField style for fixing the alignment issue */
+.MuiInputAdornment-positionStart-457 {
+  margin-right: 0 !important;
+}
